--- a/package.json
+++ b/package.json
@@ -14,7 +14,14 @@
   "author": "zhiyan",
   "license": "MIT",
   "devDependencies": {
+    "@types/inquirer": "^0.0.43",
+    "@types/node": "^11.9.4",
     "tslint": "^5.12.1",
     "typescript": "^3.3.3"
+  },
+  "dependencies": {
+    "colors": "^1.3.3",
+    "commander": "^2.19.0",
+    "inquirer": "^6.2.2"
   }
 }
