--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
   "author": "zhiyan",
   "license": "MIT",
   "devDependencies": {
+    "@types/fs-extra": "^5.0.5",
     "@types/inquirer": "^0.0.43",
     "@types/node": "^11.9.4",
+    "@types/shelljs": "^0.8.3",
     "tslint": "^5.12.1",
     "typescript": "^3.3.3"
   },
   "dependencies": {
     "colors": "^1.3.3",
     "commander": "^2.19.0",
-    "inquirer": "^6.2.2"
+    "fs-extra": "^7.0.1",
+    "inquirer": "^6.2.2",
+    "shelljs": "^0.8.3"
   }
 }
